src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhF500-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: F500\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 1000 × 500, bounds: 1239 × 688, states: [Activated]
